# sandshrew

./: Cargo.toml  README.md  build.rs  index.html  index.js  package-lock.json  package.json  posthtml.json  webpack.config.js
assets/shaders/: display_shader.wgsl
src/: app.rs  brush_icons.rs  cell.rs  cell_grid.rs  color_settings.rs  grid_config.rs  grid_display.rs  input.rs  lib.rs  main.rs  ui.rs  ui_control.rs  utils.rs
www/: index.html  index.js
