[package]
name = "sandshrew"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
bevy = "0.15.1"
enum-map = "2.7.3"
winit = "0.30.8"
rfd = "0.15.2"
image = "0.25.5"

# Enable a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
# Use release profile as default values
inherits = "release"

# Optimize with size in mind, also try "s", sometimes it is better.
# This doesn't increase compilation times compared to -O3, great improvements
opt-level = "z"

# Do a second optimization pass removing duplicate or unused code from dependencies.
# Slows compile times, marginal improvements
lto = "fat"

# When building crates, optimize larger chunks at a time
# Slows compile times, marginal improvements
codegen-units = 1

[build-dependencies]
winresource = "0.1.19"
